<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sortOrderType">Order by</string>
    <string name="pref_sortOrderTypeKey">pref_sortOrderType</string>
    <string name="pref_sortOrderTypes_default">popularity.desc</string>
    <string name="movies_loading_message">Loading movies list...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="movie_details_title">Movie details</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_release_date">Release date</string>
    <string name="lbl_vote_average">Vote average</string>
    <string name="lbl_description">Plot summary</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="api_address">http://api.themoviedb.org/3/discover/movie?</string>
    <string name="api_reviews_address">http://api.themoviedb.org/3/movie/%d/reviews?</string>
    <string name="api_trailers_address">http://api.themoviedb.org/3/movie/%d/videos?</string>
    <string name="btn_favorite_text">Add to favourites</string>
    <string name="loading_reviews_text">Loading reviews..</string>
    <string name="loading_trailers_text">Loading trailers..</string>
    <string name="added_to_favorites_msg">Added to favorites</string>
    <string name="btn_play_trailer_text">Play trailer</string>
    <string name="api_key">f135d7e7a8fb0ec7757abb6917f01fbb</string>
    <string name="share_trailer">Shere first trailer</string>
    <string name="share_trailer_phone">Shere</string>
</resources>
